[project]
name = "grabareena"
version = "0.3.0"
description = "Yle Klassinen schedule grabber"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "termcolor>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
grabareena = "grabareena.cli:main"

[tool.setuptools]
packages = ["grabareena"]
