[project]
name = "grabareena"
version = "0.3.4"
description = "Yle Klassinen schedule grabber"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "termcolor>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

# since v0.3.0, we make this project a uv-installable command-line tool (called 'grabareena')
[project.scripts]
grabareena = "grabareena.cli:main"  # points to what is run
[tool.setuptools]
packages = ["grabareena"]           # points to the folders to be included in this package
